fix: info box on small displays

--- a/themes/atlantis/login/resources/css/login.css
+++ b/themes/atlantis/login/resources/css/login.css
@@ -511,8 +511,9 @@ ul#kc-totp-supported-apps {
     }
 
     #kc-info-wrapper {
-        border-top: 1px solid rgba(255, 255, 255, 0.1);
-        background-color: transparent;
+        width: 65%;
+        margin-left: 10%;
+        font-size: 15px;
     }
 
     .login-pf .container {
